--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -162,3 +162,9 @@ body {
   margin-bottom: 5px;
   pointer-events: auto;
 }
+@keyframes fadeOut {
+  0% {opacity: 0;}
+  10% {opacity: 1;}
+  90% {opacity: 1;}
+  100% {opacity: 0;}
+}
